test/sema/cast-ptr-to-immutable-into-ptr-to-mutable.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

extern func malloc(n: uint64) -> void*;

func main() {
    // CHECK: [[@LINE+1]]:18: error: illegal cast from 'void*' to 'mutable int*'
    let buffer = cast<mutable int*>(malloc(1));
}
